# cpp-inside

./: .gitignore  CMakeLists.txt  conanfile.py  index.html
benchmark/: raw_python.py
bindings/: CMakeLists.txt
bindings/cpp/: CMakeLists.txt  api_wrapper.h  crnd_cpp.cpp  crnd_cpp.h  ctre_cpp.cpp  ctre_cpp.h
bindings/go/: CMakeLists.txt  create_crnd_go.cmake  crnd.go  crnd.go.template  crnd_test.go
bindings/java/: CMakeLists.txt  generate_java.cmake  pom.xml.template
bindings/java/crnd/: crnd.java
bindings/js/: crnd.js  package.json
bindings/python/: crnd.py
bindings/rust/: CMakeLists.txt  Cargo.template.toml  Cargo.toml.template  build.rs.template  build.template.rs
bindings/rust/src/: lib.rs
bindings/rust/src/protos/: mod.rs
css/: custom.css
doc/: gruntfile.js  index.html  package.json
doc/js/: twitter.js
docs/: gruntfile.js  index.html  package-lock.json  package.json
docs/css/: custom.css  histogram.css
docs/doc/: package-lock.json
docs/doc/css/: custom.css
docs/doc/js/: custom.js
docs/js/: custom.js  histogram.js  reveal.min.js  text-animation.js  twitter.js
docs/plugin/notes-server/: index.js
docs/video/: make_video.sh
emscripten/: build.sh  main.js  profile  run.sh
examples/: CMakeLists.txt
examples/cpp/: CMakeLists.txt  create_run.cmake  main.cpp
examples/go/: CMakeLists.txt  create_run.cmake  main.go.template
examples/java/: CMakeLists.txt  create_run.cmake  generate_java.cmake  pom.xml.template
examples/java/crnd/: App.java
examples/java/src/main/java/crnd/: App.java.template
examples/nodejs/: CMakeLists.txt  create_run.cmake  main.js  package.json
examples/python/: CMakeLists.txt  create_run.cmake  main.py
examples/rust/: CMakeLists.txt  Cargo.template.toml  Cargo.toml.template  create_run.cmake  main.rs
examples/rust/src/: main.rs
js/: custom.js  text-animation.js  twitter.js
messages/: help.proto  model.proto  query.proto  sample.proto  sample_request.proto  status.proto
src/: CMakeLists.txt
src/include/: api_c.h
src/messages/: CMakeLists.txt  match.proto
src/src/: api_c.cpp
video/: make_video.sh
